--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -7,6 +7,24 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <!-- Brand -->
+    <a class="navbar-brand" href="#">Student Management System</a>
+
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/students}">Student Management</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <div class="container">
     <div class="row">
         <h1>List of Students</h1>
@@ -21,10 +39,10 @@
     <table class="table table-striped">
         <thead class="thead-dark">
         <tr>
-            <th scope="col">Student Id</th>
-            <th scope="col">Firstname</th>
-            <th scope="col">Lastname</th>
-            <th scope="col">Email</th>
+            <th>Firstname</th>
+            <th>Lastname</th>
+            <th>Email</th>
+            <th>Action</th>
         </tr>
         </thead>
         <tbody>
@@ -33,6 +51,12 @@
             <td th:text="${student.firstname}"></td>
             <td th:text="${student.lastname}"></td>
             <td th:text="${student.email}"></td>
+            <td>
+                <a th:href = "@{student/edit/{id}(id = ${student.id})}"
+                class="btn btn-primary">Update</a>
+                <a th:href = "@{student/{id}(id = ${student.id})}"
+                class="btn btn-danger">Delete</a>
+            </td>
         </tr>
         </tbody>
     </table>
